<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameConstrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".GameActivity">

    <Button
        android:id="@+id/back_btn"
        android:layout_width="120dp"
        android:layout_height="63dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/back_btn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/practice_answer_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/edit_text"
        android:fontFamily="monospace"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="\?\?\?\?\?"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/practice_flagg_iv" />

    <ImageView
        android:id="@+id/practice_flagg_iv"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/picture_frame"
        android:backgroundTint="#F7F7F7F7"
        android:contentDescription="@string/flag1"
        android:padding="10dp"
        app:layout_constraintDimensionRatio="w,1.429:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/practice_header_txt"
        app:srcCompat="@drawable/se" />

    <TextView
        android:id="@+id/practice_header_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@android:drawable/edit_text"
        android:fontFamily="monospace"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:text="@string/practice_main"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iwBottomGamePage"
        android:layout_width="404dp"
        android:layout_height="35dp"
        android:contentDescription="@string/bannerFlag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/banner" />

    <ImageView
        android:id="@+id/ivTopBannerGamePage"
        android:layout_width="409dp"
        android:layout_height="38dp"
        android:contentDescription="@string/bannerFlag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner2" />


</androidx.constraintlayout.widget.ConstraintLayout>